@@ -149,13 +149,23 @@ name|DATE
 operator|+
 literal|1
 decl_stmt|;
+DECL|field|ID
+specifier|static
+specifier|final
+name|int
+name|ID
+init|=
+name|BODY
+operator|+
+literal|1
+decl_stmt|;
 DECL|field|LENGTH
 specifier|static
 specifier|final
 name|int
 name|LENGTH
 init|=
-name|BODY
+name|ID
 operator|+
 literal|1
 decl_stmt|;
@@ -473,13 +483,9 @@ DECL|field|time
 name|String
 name|time
 decl_stmt|;
-DECL|field|BASE
-specifier|static
-specifier|final
-name|int
-name|BASE
-init|=
-literal|10
+DECL|field|id
+name|String
+name|id
 decl_stmt|;
 DECL|method|startElement
 specifier|public
@@ -518,6 +524,10 @@ operator|=
 literal|null
 expr_stmt|;
 name|time
+operator|=
+literal|null
+expr_stmt|;
+name|id
 operator|=
 literal|null
 expr_stmt|;
@@ -568,6 +578,25 @@ operator|.
 name|equals
 argument_list|(
 literal|"title"
+argument_list|)
+condition|)
+block|{
+name|contents
+operator|.
+name|setLength
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|qualified
+operator|.
+name|equals
+argument_list|(
+literal|"id"
 argument_list|)
 condition|)
 block|{
@@ -712,6 +741,9 @@ name|time
 parameter_list|,
 name|String
 name|body
+parameter_list|,
+name|String
+name|id
 parameter_list|)
 block|{
 name|String
@@ -765,6 +797,13 @@ literal|"[\t\n]"
 argument_list|,
 literal|" "
 argument_list|)
+expr_stmt|;
+name|t
+index|[
+name|ID
+index|]
+operator|=
+name|id
 expr_stmt|;
 synchronized|synchronized
 init|(
@@ -905,6 +944,30 @@ name|qualified
 operator|.
 name|equals
 argument_list|(
+literal|"id"
+argument_list|)
+operator|&&
+name|id
+operator|==
+literal|null
+condition|)
+block|{
+comment|//just get the first id
+name|id
+operator|=
+name|contents
+operator|.
+name|toString
+argument_list|()
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|qualified
+operator|.
+name|equals
+argument_list|(
 literal|"page"
 argument_list|)
 condition|)
@@ -923,6 +986,8 @@ argument_list|,
 name|time
 argument_list|,
 name|body
+argument_list|,
+name|id
 argument_list|)
 expr_stmt|;
 block|}
@@ -982,6 +1047,16 @@ argument_list|(
 name|tuple
 index|[
 name|BODY
+index|]
+argument_list|)
+expr_stmt|;
+name|idField
+operator|.
+name|setValue
+argument_list|(
+name|tuple
+index|[
+name|ID
 index|]
 argument_list|)
 expr_stmt|;
