@@ -176,6 +176,10 @@ DECL|field|dateField
 name|Field
 name|dateField
 decl_stmt|;
+DECL|field|idField
+name|Field
+name|idField
+decl_stmt|;
 DECL|method|DocState
 specifier|public
 name|DocState
@@ -247,6 +251,30 @@ argument_list|,
 name|termVecVal
 argument_list|)
 expr_stmt|;
+name|idField
+operator|=
+operator|new
+name|Field
+argument_list|(
+name|BasicDocMaker
+operator|.
+name|ID_FIELD
+argument_list|,
+literal|""
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|NO_NORMS
+argument_list|)
+expr_stmt|;
 name|doc
 operator|=
 operator|new
@@ -272,6 +300,13 @@ operator|.
 name|add
 argument_list|(
 name|dateField
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|idField
 argument_list|)
 expr_stmt|;
 block|}
